fixed overflow caused by jumbotron and logo padding by giving nav bar 7vh and jumbotron 93vh, overwrote default css for footer to centre footer content and overwrote default css to move login request on navigation to far right

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body{
@@ -30,11 +29,53 @@ a{
     display: none;
 }
 
+.navbar {
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 7vh;
+}
+.nav-logo {
+    max-width: 4.375rem;
+    padding-bottom: 0.3rem;
+}
 
+.navbar-collapse {
+    flex-grow: 0;
+}
 
+.navbar-brand {
+    padding-bottom: .3125rem;
+}
 
+.nav-link {
+    padding-bottom: 0.3rem;
+    padding: 0;
+}
 
+.pt-1 {
+    padding-top: 0!important;
+}
 
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 0;
+    padding-left: 0;
+}
+
+/* Code to change "Already a member? Log in" background */
+/* .unauthorized-loginrequest {
+    background-color: #3D3D3D;
+    border: 1px solid #3D3D3D;
+    border-radius: 8px;
+    padding: .346rem;
+}
+
+#text-dark-overwrite {
+    color: white!important;
+}
+
+#text-primary-overwrite {
+    color: #f8b039!important;
+} */
 
 
 /*---------- Footer ----------*/
@@ -45,7 +86,26 @@ a{
     width: 100%;
 }
 
+#footer-overwrite {
+    padding-top: revert!important;
+    padding-bottom: revert!important;
+}
 
+#footer-content {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#socialmedialist-overwrite {
+    margin-top: revert;
+    margin-bottom: revert;
+}
+
+.socialmedialink-overwrite {
+    margin-top: revert;
+    margin-bottom: revert;
+
+}
 
 
 
@@ -70,7 +130,7 @@ a{
 }
 
 .callout-container{
-    height: 100vh;
+    height: 93vh;
     background: url(../../media/bg.png) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -85,7 +145,7 @@ a{
 /* JUMBOTRON */
 .jumbotron{
     background-color: rgba(99, 99, 99, 0.603);
-    margin-bottom: 150px;
+    margin-bottom: 70px;
     width: 1000px;
     padding: 40px;
     border-radius: 30px;
